--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    //Comentario para git
+
     <EditText
         android:id="@+id/et_01"
         android:layout_width="match_parent"
